--- a/client/libs/preStyle.css
+++ b/client/libs/preStyle.css
@@ -7,7 +7,7 @@
   --color-null: #4a4a4a;
   --color-debug-bg: white;
 
-  /* Magic Mirror */
+  /* CSS variables reactively change via component */
   --color-bg: #323232;
   --color-icon: #a1a1a1;
   --color-border: #3e3e3e;
@@ -18,20 +18,18 @@
   --color-button-active: #1f1f1f;
   --color-button-disabled: #393939;
   --color-selection: #46a0f5;
-  
   --color-text-active: #1b1b1b;
   --color-text-default: #a1a1a1;
   --color-text-disabled: #525252;
-  
   --color-input-focus: #fcfcfc;
   --color-input-idle: #262626;
-
   --scrollbar-thumb-width: 20px;
   --scrollbar-thumb-radius: 20px;
   --panel-height: 50px;
   --panel-width: 50px;
   /*  */
 
+  --color-cancel: #D32F2F;
   --font-size: .875rem;
   color: var(--color-text-default);
   font-family: Rubik;
