--- a/client/libs/preStyle.css
+++ b/client/libs/preStyle.css
@@ -29,6 +29,10 @@
   --panel-width: 50px;
   /*  */
 
+  --color-note-light: #60ad5e;
+  --color-note-mid: #2e7d32;
+  --color-note-dark: #005005;
+  --color-note-icon: #fff;
   --color-cancel: #D32F2F;
   --font-size: .875rem;
   color: var(--color-text-default);
@@ -69,4 +73,62 @@ svg {
 #app {
   box-sizing: border-box;
   width: 100%;
+}
+
+[style*="--aspect-ratio"] > :first-child {
+  width: 100%;
+}
+[style*="--aspect-ratio"] > div {  
+  height: auto;
+} 
+@supports (--custom:property) {
+  [style*="--aspect-ratio"] {
+    position: relative;
+  }
+  [style*="--aspect-ratio"]::before {
+    content: "";
+    display: block;
+    padding-bottom: calc(100% / (var(--aspect-ratio)));
+  }  
+  [style*="--aspect-ratio"] > :first-child {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+  }  
+}
+
+.aspect-ratio-box {
+  height: 0;
+  overflow: hidden;
+  padding-top: 540px / 960px * 100%;
+  background: white;
+  position: relative;
+}
+.aspect-ratio-box-inside {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.flexbox-centering {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.viewport-sizing {
+  font-size: 5vw;
+}
+
+
+.gloabl-notification {
+  overflow: hidden;
+  transition: height 200ms ease-out 20ms;
+  height: 0;
+}
+.container .section.open {
+  height: auto;
 }
