--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,92 @@
+.global-notification {
+  box-sizing: border-box;
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: calc(100% - 2rem);
+  top: 0;
+  left: 0;
+  padding: .5rem 1rem;
+  margin: .5rem 1rem;
+  border-radius: .5rem;
+  background-color: green;
+  z-index: 100;
+  color: white;
+  font-weight: 400;
+  transition: height 200ms var(--quad) 20ms;
+  user-select: none;
+}
+
+.note-preview {
+  margin-top: .5rem;
+  height: 0px;
+  width: 100%;
+  padding-bottom: 56.25%;
+  position: relative;
+  background-color: var(--color-note-dark);
+}
+
+.note-list {
+  list-style: inside;
+  cursor: default;
+}
+.note-list > li {
+  margin: .25rem 0px;
+}
+
+.note-preview > div {
+  position: absolute;
+	top: 0; bottom: 0; left: 0; right: 0;
+}
+
+
+
+.global-notification-wrap, .global-notification-details {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 0rem;
+  padding: .25rem 0px;
+  font-weight: 300;
+}
+
+
+
+.note-cancel {
+  width: 2rem;
+}
+
+.note-display {
+  width: 2rem;
+}
+
+.note-header {
+  width: calc(100% - 3rem);
+  display: flex;
+  justify-content: center;
+  cursor: default;
+}
+
+.global-notification-toggle {
+  box-sizing: border-box;
+  cursor: pointer;
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: center;
+  /* padding: .5rem 0px; */
+  /* margin: 0px .5rem; */
+}
+
+
+.note-icon {
+  cursor: pointer;
+  width: 1.8rem;
+  height: 1.8rem;
+  /* border: 2px solid white; */
+}
+
 .appGrid {
   box-sizing: border-box;
   width: 100%;
@@ -47,6 +136,8 @@ svg {
   height: 1.8rem;
   margin: 0px .5rem;
 }
+
+
 
 .screen {
   display: flex;
