--- a/client/libs/preStyle.css
+++ b/client/libs/preStyle.css
@@ -51,7 +51,17 @@ html {
 }
 
 svg {
+  transition: all 80ms var(--quad) 20ms;
   width: 100%;
+}
+
+.icon {
+  display: block;
+  width: 1.8rem;
+  height: 1.8rem;
+  min-width: 1.8rem;
+  min-height: 1.8rem;
+  margin-right: .5rem;
 }
 
 ::-webkit-scrollbar {
@@ -75,60 +85,115 @@ svg {
   width: 100%;
 }
 
-[style*="--aspect-ratio"] > :first-child {
-  width: 100%;
-}
-[style*="--aspect-ratio"] > div {  
-  height: auto;
-} 
-@supports (--custom:property) {
-  [style*="--aspect-ratio"] {
-    position: relative;
-  }
-  [style*="--aspect-ratio"]::before {
-    content: "";
-    display: block;
-    padding-bottom: calc(100% / (var(--aspect-ratio)));
-  }  
-  [style*="--aspect-ratio"] > :first-child {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-  }  
-}
 
-.aspect-ratio-box {
-  height: 0;
-  overflow: hidden;
-  padding-top: 540px / 960px * 100%;
-  background: white;
-  position: relative;
-}
-.aspect-ratio-box-inside {
+
+.global-notification {
+  box-sizing: border-box;
   position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: calc(100% - 2rem);
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  padding: .5rem 1rem;
+  margin: .5rem 1rem;
+  border-radius: .5rem;
+  background-color: green;
+  z-index: 100;
+  color: white;
+  font-weight: 400;
+  user-select: none;
+  height: auto;
+  overflow: hidden;
+  transition: height 200ms var(--quad) 20ms;
+  box-shadow: .5rem .5rem .5rem rgba(0,0,0,0.2);
 }
 
-.flexbox-centering {
-  height: 100%;
+.note-preview {
+  margin-top: .5rem;
+  height: 0px;
+  width: 100%;
+  padding-bottom: 56.25%;
+  position: relative;
+  background-color: var(--color-note-dark);
+}
+
+.note-list {
+  list-style: inside;
+  cursor: default;
+}
+.note-list > li {
+  margin: .25rem 0px;
+}
+
+.note-preview > div {
+  position: absolute;
+	top: 0; bottom: 0; left: 0; right: 0;
+}
+
+.global-notification-text {
+  color: white;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.global-notification-wrap, .global-notification-details {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0px 0rem;
+  padding: .25rem 0px;
+  font-weight: 300;
 }
-.viewport-sizing {
-  font-size: 5vw;
+
+.note-cancel {
+  width: 2rem;
+}
+
+.note-display {
+  width: 2rem;
+}
+
+.note-header {
+  flex-wrap: nowrap;
+  width: calc(100% - 3rem);
+  display: flex;
+  justify-content: center;
+  cursor: default;
+}
+
+.global-notification-toggle {
+  box-sizing: border-box;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+}
+
+.note-icon {
+  cursor: pointer;
+  width: 1.8rem;
+  height: 1.8rem;
 }
 
 
-.gloabl-notification {
-  overflow: hidden;
-  transition: height 200ms ease-out 20ms;
-  height: 0;
+/* For notifications only */
+@media screen and (max-width:199px) {
+
 }
-.container .section.open {
-  height: auto;
+@media screen and (max-width:119px) {
+  .global-notification-wrap {
+    flex-direction: column;
+  }
+  .global-notification {
+    padding: .5rem 0px;
+    margin: .5rem 0px;
+    width: 100%;
+  }
+  .global-notification-toggle {
+    width: 100%;
+    margin: 0px 0px;
+    padding: 0px;
+  }
 }
